cmake_minimum_required(VERSION 3.8)
project(carriage_bridge)
find_package(ament_cmake REQUIRED)
find_package(sensor_msgs REQUIRED)
install(PROGRAMS scripts/carriage_bridge_node.py DESTINATION lib/${PROJECT_NAME})
install(DIRECTORY urdf launch config DESTINATION share/${PROJECT_NAME})
ament_package()
