<?xml version="1.0"?>
<package format="3">
  <name>carriage_bridge</name>
  <version>1.0.0</version>
  <description>ROS2 bridge for STM32F373 welding carriage</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
